# tw-quant-research

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
config/: data-sources.yaml  open-source-release.json  product-alignment.yaml  strategy.yaml  universe.yaml  valuation.yaml
docs/: backtest-settings-spec.md  desktop-release.md  field-dictionary.md  formula-builder-spec.md  k2-k5-approval-package.md  lh-driver-contract.md  open-source-release-scope.md  phase-1-framework-selection.md  platform-information-architecture.md  quant-framework-comparison.md  recommended-architecture.md  s1-qlib-integration.md  s2-data-contract.md  s3-data-source-research.md  s4-ingestion-product-alignment.md  s5-quality-corporate-actions.md  s5-s9-stage-plan.md  s6-feature-pipeline.md  s7-backtest.md  s8-read-only-product-view.md  s9-release-hardening.md  tqe-optimization-acceptance-review.md  tqe-p0-acceptance.md  tqe-p1-history-coverage.md  tqe-p2-chart-cockpit.md  tqe-p3-research-loop.md  tqe-p4-runtime-boundary.md  tqe-p5-adjusted-ohlcv-volume-policy.md  tqe-p5-execution-plan.md  tqe-p5-history-admission-proposal.md  tqe-p5-op-demo.md  tqe-p5-phase-driver-contract-amendment.md  tqe-p5-source-contract-research.md  tqe-p6-deferred-capability-activation-proposal.md  tqe-p6-delayed-feed-contract.md  tqe-product-boundary.md  (+5 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/binaries/: tqe-sidecar-x86_64-unknown-linux-gnu
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: alerts.rs  lib.rs  main.rs  watchlist.rs
(+182 files in other folders)
