[package]
name = "tw-quant-engine-desktop"
version = "0.1.4"
description = "TW Quant Research desktop shell"
authors = ["TW Quant Engine contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tw_quant_engine_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-shell = "2.3.5"
serde_json = "1.0"
